--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -13,7 +13,8 @@
         <p><i>(Project Name: Grade)</i></p>
         <ul>
         {% for project in project_info %}
-            <li> {{ project[0] }}: {{ project[1] }}</li>
+            <li> {{ project[0] }}: {{ project[1] }}
+                <a href="/project?project_title={{ project[0] }}">Project Info!</a>
         {% endfor %}
         </ul>
     {% endif %}
